--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
     "path": "^0.12.7",
-    "react": "^16.3.1"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1"
   },
   "devDependencies": {
     "webpack": "^4.5.0",
